Deploy Production: SSL Fix and Instagram Update

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,10 @@
   "license": "ISC",
   "description": "Backend da aplicação Gestão Marcha Cup",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "multer": "^2.0.2",
+    "pg": "^8.16.3",
     "sqlite3": "^5.1.7"
   }
 }
